Primeiro commit do projeto

--- a/_HTML/comunidade_na_diaspora.html
+++ b/_HTML/comunidade_na_diaspora.html
@@ -19,7 +19,13 @@
         <nav>
             <ul>
                 <li><a href="index.html">Página inicial </a></li>
-                <li><a href="historiasdaguine-bissau.html"> História da Guiné-Bissau </a></li>
+                <li class="listaHGB"><a href="historiasdaguine-bissau.html"> História da Guiné-Bissau </a>
+                    <ul class="subListaHGB">
+                        <li>ITEM 1</li>
+                        <li>ITEM 2</li>
+                        <li>ITEM 3</li>
+                    </ul>
+                    </li>
                 <li><a href="fotosinteressantes.html"> Fotos interessantes </a></li>
                 <li><a href="alguns_fatos_sobre_a_guine-bissau.html"> Alguns fatos sobre a Guiné-Bissau </a>
                 </li>
