--- a/_HTML/contatos.html
+++ b/_HTML/contatos.html
@@ -24,7 +24,13 @@
         <nav>
             <ul>
                 <li><a href="index.html">Página inicial </a></li>
-                <li><a href="historiasdaguine-bissau.html"> História da Guiné-Bissau </a></li>
+                <li class="listaHGB"><a href="historiasdaguine-bissau.html"> História da Guiné-Bissau </a>
+                    <ul class="subListaHGB">
+                        <li>ITEM 1</li>
+                        <li>ITEM 2</li>
+                        <li>ITEM 3</li>
+                    </ul>
+                    </li>
                 <li><a href="fotosinteressantes.html"> Fotos interessantes </a></li>
                 <li><a href="alguns_fatos_sobre_a_guine-bissau.html"> Alguns fatos sobre a Guiné-Bissau </a>
                 </li>
@@ -39,7 +45,7 @@
     <!-- Main -->
     <main>
         <h1>ENTRE EM CONTATO!</h1>
-        <form action="#" method="post">
+        <form action="caminatenarang@gmail.com" method="post">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" placeholder="Caminate">
             <label for="sobrenome">Sobrenome:</label>
