--- a/_HTML/index.html
+++ b/_HTML/index.html
@@ -18,7 +18,13 @@
         <nav>
             <ul>
                 <li><a href="index.html">Página inicial </a></li>
-                <li><a href="historiasdaguine-bissau.html"> História da Guiné-Bissau </a></li>
+                <li class="listaHGB"><a href="historiasdaguine-bissau.html"> História da Guiné-Bissau </a>
+                    <ul class="subListaHGB">
+                        <li>ITEM 1</li>
+                        <li>ITEM 2</li>
+                        <li>ITEM 3</li>
+                    </ul>
+                    </li>
                 <li><a href="fotosinteressantes.html"> Fotos interessantes </a></li>
                 <li><a href="alguns_fatos_sobre_a_guine-bissau.html"> Alguns fatos sobre a Guiné-Bissau </a>
                 </li>
@@ -39,10 +45,14 @@
             1
         </section>
         <section class="grid-item item_2">
-            2
+            <iframe src="https://www.dw.com/pt-002/guin%C3%A9-bissau/s-30382" target="_blank">
+
+            </iframe>
         </section>
         <section class="grid-item item_3">
-            3
+            <iframe src="https://www.radiosolmansi.net/">
+
+            </iframe>
         </section>
         <section class="grid-item item_4">
             4
